--- a/src/app/_components/layouts/Layout.module.scss
+++ b/src/app/_components/layouts/Layout.module.scss
@@ -5,8 +5,8 @@
   margin: auto;
   min-height: 100vh;
   height: 100%;
-  margin-top: 5rem;
-  padding-bottom: 5rem;
+  // margin-top: 5rem;
+  // padding-bottom: 5rem;
   background-color: v.$color-neutral-dark;
   @include m.mediaDesktop {
     margin-top: 0;
