--- a/src/app/styles/base/_base.scss
+++ b/src/app/styles/base/_base.scss
@@ -1,35 +1,35 @@
 @use "../abstracts/variables" as v;
 @use "../abstracts/mixins" as m;
 
-:root {
-  /* --main-color: #fca311; */
-  --color-primary: v.$color-primary;
-  --color-primary-dark: #45a29e;
-  --color-primary-light: #c2fef9;
+// :root {
+//   /* --main-color: #fca311; */
+//   --color-primary: v.$color-primary;
+//   --color-primary-dark: #45a29e;
+//   --color-primary-light: #c2fef9;
 
-  --color-secondary: #c5c6c7;
+//   --color-secondary: #c5c6c7;
 
-  --color-neutral: #1f2833;
-  --color-neutral-dark: #0b0c10;
+//   --color-neutral: #1f2833;
+//   --color-neutral-dark: #0b0c10;
 
-  --main-color: v.$color-primary;
-  --main-color-med: #222629;
-  --main-color-light: #b197fc;
-  --grey-color-0: #f8f9fa;
-  --grey-color-1: #f1f3f5;
-  --grey-color-2: #e9ecef;
-  --grey-color-3: #dee2e6;
-  --grey-color-4: #ced4da;
-  --grey-color-5: #adb5bd;
-  --grey-color-6: #868e96;
-  --grey-color-7: #495057;
-  --grey-color-8: #343a40;
-  --grey-color-9: #212529;
-  --tooltip-margin: 30px;
-  --tooltip-arrow-size: 6px;
-  --tooltip-text-color: var(--grey-color-9);
-  --tooltip-background-color: var(--grey-color-1);
-}
+//   --main-color: v.$color-primary;
+//   --main-color-med: #222629;
+//   --main-color-light: #b197fc;
+//   --grey-color-0: #f8f9fa;
+//   --grey-color-1: #f1f3f5;
+//   --grey-color-2: #e9ecef;
+//   --grey-color-3: #dee2e6;
+//   --grey-color-4: #ced4da;
+//   --grey-color-5: #adb5bd;
+//   --grey-color-6: #868e96;
+//   --grey-color-7: #495057;
+//   --grey-color-8: #343a40;
+//   --grey-color-9: #212529;
+//   --tooltip-margin: 30px;
+//   --tooltip-arrow-size: 6px;
+//   --tooltip-text-color: var(--grey-color-9);
+//   --tooltip-background-color: var(--grey-color-1);
+// }
 
 *,
 *::before,
@@ -94,6 +94,8 @@ button {
 
 .hero__container {
   @include m.flexCenter();
+  background-color: v.$color-primary;
+  min-height: 100vh;
   height: 100%;
 }
 
@@ -119,6 +121,7 @@ button {
     padding: 1rem 1rem 1rem 8rem;
     width: 50%;
     max-width: 70rem;
+    color: v.$color-primary-light;
   }
 
   & h3 {
@@ -172,19 +175,20 @@ button {
 
   & button {
     padding: 0.75rem 4rem;
-    background-color: v.$color-primary;
+    background-color: v.$color-secondary;
     border-radius: 5px;
-    border: 2px solid v.$color-primary;
+    border: 2px solid v.$color-secondary;
     font-size: 2rem;
     font-weight: 600;
     letter-spacing: 0.2rem;
-    color: v.$text-color-light;
+    color: v.$color-primary;
     transition: all 0.2s ease;
 
     &:hover,
     &:focus {
       color: v.$color-primary;
-      background-color: v.$text-color-light;
+      background-color: v.$color-neutral;
+      border-color: v.$color-neutral;
       transform: scale(1.04);
       transition: all 0.2s ease;
     }
@@ -387,7 +391,7 @@ button {
   /* border: 1px solid #be3939; */
   position: absolute;
   height: 4px;
-  background: v.$color-primary;
+  background: v.$color-secondary;
   bottom: -4px;
   border-radius: 6px;
   width: 100%;
