style: Fixed colors

--- a/src/app/_components/layouts/Hamburger.module.scss
+++ b/src/app/_components/layouts/Hamburger.module.scss
@@ -22,7 +22,7 @@
 .midBarOpen,
 .bottomBarOpen {
   height: 5px;
-  background-color: v.$color-primary;
+  background-color: v.$hamburger;
   border-radius: 5px;
   transform-origin: left;
   margin: 3px 0;
