--- a/src/app/_components/layouts/MobileMenu.module.scss
+++ b/src/app/_components/layouts/MobileMenu.module.scss
@@ -34,7 +34,7 @@
     text-decoration: none;
     list-style: none;
     padding: 2rem;
-    background-color: v.$color-neutral;
+    background-color: v.$color-primary;
     width: 80%;
     text-align: center;
   }
