--- a/src/app/styles/abstracts/_variables.scss
+++ b/src/app/styles/abstracts/_variables.scss
@@ -34,3 +34,5 @@ $color-footer: $color-primary;
 $color-main: $color-primary;
 $color-navLinks: $color-primary-light;
 $color-blogTitle: $grey-color-8;
+
+$hamburger: $color-secondary;
